@@ -1,0 +1,9 @@
+Title: Modified languages (via local hierarchy) were listed twice
+Level: 1
+Component: wato
+Version: 1.2.4b1
+Date: 1387189997
+Class: fix
+
+Localization files which were overridden via files in the local-hierarchy of OMD
+were listed twice in the user profile dialog. This has been fixed now.
