@@ -40,6 +40,7 @@
     * 0242 FIX: Parameters for clustered services can now be configured on the cluster host...
     * 0309 FIX: Trying to prevent read/write conflicts with a large user base...
     * 0311 FIX: Fixed "Inventory failed" message when trying an inventory on clusters via WATO...
+    * 0328 FIX: Modified languages (via local hierarchy) were listed twice...
 
     Notifications:
     * 0108 FIX: Prevent service notification on host alerts...
